<resources>
    <string name="app_name" translatable="false">LittleDrum</string>
    <string name="stop_all">Stop all</string>
    <string name="has_not_permission">The program cannot work without this permission - you need to download the sounds of the instruments.</string>
    <string name="close">Close</string>
    <string name="empty" translatable="false" />
    <string name="loading">Loading</string>
    <string name="loading_exit">loading is complete</string>
    <string name="loading_text">Wait a moment, instrument sounds and background music are loading</string>

    //utils
    <string name="link_host" translatable="false">lp.littledrum.com</string>
    <string name="link_path_prefix" translatable="false">/linksPage/</string>
    <string name="link_path_prefix_lower" translatable="false">/linkspage/</string>

    //store content
    <string name="shop_title">Store:</string>
    <string name="diameter_title">Diameter:</string>
    <string name="weight_title">Weight:</string>
    <string name="sound_title">Sound:</string>
    <string name="shop_button">Go to store</string>
    <string name="instrument">Instrument:</string>

    //Shops
    <string name="shop_kosmosky" translatable="false">KOSMOSKY</string>
    <string name="url_kosmosky" translatable="false">https://translate.google.com/</string>
    <string name="shop_2smallPixels" translatable="false">2SmallPixels</string>
    <string name="url_2smallPixels" translatable="false">https://translate.google.com/</string>
    <string name="shop_gluckofoniya" translatable="false">Gluckofoniya</string>
    <string name="url_gluckofoniya" translatable="false">https://vk.com/gluckofoniya/</string>
    <string name="shop_steklov" translatable="false">Мастерская звука "Стеклов"</string>
    <string name="url_steklov" translatable="false">https://vk.com/gluksteklov</string>
    <string name="shop_title_2smallPixels">Developer:</string>
    <string name="weight_title_2smallPixels">Happy New Year and Merry Christmas!</string>
    <string name="rate_2smallPixels">Rate app</string>

    //main_insrumaent
    <string name="instrument_main">Mountain river</string>
    <string name="diameter_main">35 cm</string>
    <string name="weight_main">5.5 kg</string>
    <string name="sound_main">La Minor</string>

    //tree
    <string name="instrument_tree">Herringbone</string>

    //unison_of_hearts_insrumaent
    <string name="unison_of_hearts_name">Unison of hearts</string>
    <string name="diameter_unison_of_hearts">22 см</string>
    <string name="weight_unison_of_hearts">1.6 кг</string>
    <string name="sound_unison_of_hearts">Akebono do 432Hz</string>

    //open_space_insrumaent
    <string name="open_space_name">Open space</string>
    <string name="diameter_open_space">22 см</string>
    <string name="weight_open_space">1.6 кг</string>
    <string name="sound_open_space">C major 432Hz</string>
    <string name="extra_unison_of_hearts">The glucophone has two tunings in one. The options are C major + akebono and C major + pygmy. Re-tuning in a minute without a tuner and knowledge of notes thanks to a specially designed circuit.</string>

    //budda_insrumaent
    <string name="budda_name">Meditation</string>
    <string name="diameter_budda">22 cm</string>
    <string name="weight_budda">1.6 kg</string>
    <string name="sound_budda">La Minor</string>

    //mounti_night_insrumaent
    <string name="mounti_night_name">Night in the mountains</string>
    <string name="diameter_mounti_night">22 cm</string>
    <string name="weight_mounti_night">1.6 kg</string>
    <string name="sound_mounti_night">Hijaz</string>

    //night_flower_insrumaent
    <string name="night_flower_name">Night flower</string>
    <string name="diameter_night_flower">22 cm</string>
    <string name="weight_night_flower">1.6 kg</string>
    <string name="sound_night_flower">C major</string>

    //top panel
    <string name="random">Random</string>
    <string name="onn">On</string>
    <string name="off">Off</string>
    <string name="fon_musick">Background music</string>
    <string name="fon_img">Background picture</string>
    <string name="day">Day</string>
    <string name="night">Night</string>
    <string name="fon_music_loading">Tracks are loading …</string>
    <string name="nothing" translatable="false">-</string>

    //fon image names
    <string name="fon_a_day" translatable="false">Marble</string>
    <string name="fon_a_night" translatable="false">Sky Blue</string>
    <string name="fon_b_day" translatable="false">Watercolor</string>
    <string name="fon_b_night" translatable="false">Abstract Night</string>
</resources>
