<?xml version="1.0" encoding="utf-8"?>
<MotionScene xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:motion="http://schemas.android.com/apk/res-auto"
    android:id="@+id/motion_operation">

    <Transition
        motion:constraintSetEnd="@+id/end"
        motion:constraintSetStart="@+id/start"
        motion:duration="@integer/anim_duration_medium">

    </Transition>

    <ConstraintSet android:id="@+id/start">
        <Constraint
            android:id="@+id/img_shop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/ic_icon_for_shop"
            android:visibility="gone"
            motion:layout_constraintStart_toStartOf="parent"
            motion:layout_constraintTop_toBottomOf="@+id/content_instrument" />

        <Constraint
            android:id="@+id/instrument_name"
            style="@style/H2"
            android:layout_width="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="10dp"
            motion:layout_constraintBottom_toTopOf="@+id/link_shop_name"
            motion:layout_constraintEnd_toEndOf="parent"
            motion:layout_constraintStart_toEndOf="@+id/img_shop" />

        <Constraint
            android:id="@+id/link_shop_name"
            style="@style/Text_medium"
            android:layout_width="wrap_content"
            android:layout_marginBottom="26dp"
            android:gravity="center"
            motion:layout_constraintBottom_toBottomOf="parent"
            motion:layout_constraintEnd_toEndOf="parent"
            motion:layout_constraintStart_toStartOf="parent" />

        <Constraint
            android:id="@+id/link_line"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:src="@drawable/ic_line_stroke"
            android:visibility="visible"
            motion:layout_constraintEnd_toEndOf="@id/link_shop_name"
            motion:layout_constraintStart_toStartOf="@+id/link_shop_name"
            motion:layout_constraintTop_toBottomOf="@+id/link_shop_name" />


        <Constraint
            android:id="@+id/title_shop_name"
            style="@style/Text_medium"
            android:layout_width="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="6dp"
            android:text="@string/shop_title"
            motion:layout_constraintStart_toStartOf="parent"
            motion:layout_constraintTop_toBottomOf="@+id/motion_instrument" />

        <Constraint
            android:id="@+id/shop_name"
            style="@style/Text_bold"
            android:layout_marginStart="8dp"
            motion:layout_constraintBottom_toBottomOf="@+id/title_shop_name"
            motion:layout_constraintStart_toEndOf="@+id/title_shop_name"
            motion:layout_constraintTop_toBottomOf="@+id/motion_instrument" />

        <Constraint
            android:id="@+id/title_diameter"
            style="@style/Text_medium"
            android:layout_width="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="6dp"
            android:text="@string/diameter_title"
            motion:layout_constraintStart_toStartOf="parent"
            motion:layout_constraintTop_toBottomOf="@+id/motion_instrument" />

        <Constraint
            android:id="@+id/shop_diameter"
            style="@style/Text_bold"
            android:layout_marginStart="8dp"
            motion:layout_constraintBottom_toBottomOf="@+id/title_diameter"
            motion:layout_constraintStart_toEndOf="@+id/title_diameter"
            motion:layout_constraintTop_toBottomOf="@+id/motion_instrument" />

        <Constraint
            android:id="@+id/title_weight"
            style="@style/Text_medium"
            android:layout_width="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="6dp"
            android:text="@string/weight_title"
            motion:layout_constraintStart_toStartOf="parent"
            motion:layout_constraintTop_toBottomOf="@+id/motion_instrument" />

        <Constraint
            android:id="@+id/shop_weight"
            style="@style/Text_bold"
            android:layout_marginStart="8dp"
            motion:layout_constraintBottom_toBottomOf="@+id/title_weight"
            motion:layout_constraintStart_toEndOf="@+id/title_weight"
            motion:layout_constraintTop_toBottomOf="@+id/motion_instrument" />

        <Constraint
            android:id="@+id/title_sound"
            style="@style/Text_medium"
            android:layout_width="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="24dp"
            android:text="@string/sound_title"
            motion:layout_constraintStart_toStartOf="parent"
            motion:layout_constraintTop_toBottomOf="@+id/motion_instrument" />

        <Constraint
            android:id="@+id/shop_sound"
            style="@style/Text_bold"
            android:layout_marginStart="8dp"
            motion:layout_constraintBottom_toBottomOf="@+id/title_sound"
            motion:layout_constraintStart_toEndOf="@+id/title_sound"
            motion:layout_constraintTop_toBottomOf="@+id/motion_instrument" />

        <Constraint
            android:id="@+id/button_shop"
            style="@style/Text_medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/button_shop"
            android:drawableEnd="@drawable/ic_arrow_right_button"
            android:text="@string/shop_button"
            android:textAllCaps="false"
            android:textColor="@color/super_"
            motion:layout_constraintStart_toStartOf="parent"
            motion:layout_constraintTop_toBottomOf="@+id/motion_instrument" />
    </ConstraintSet>

    <ConstraintSet android:id="@+id/end">
        <Constraint
            android:id="@+id/img_shop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:src="@drawable/ic_icon_for_shop"
            motion:layout_constraintBottom_toBottomOf="@+id/instrument_name"
            motion:layout_constraintStart_toStartOf="parent"
            motion:layout_constraintTop_toTopOf="@+id/instrument_name" />

        <Constraint
            android:id="@+id/instrument_name"
            style="@style/H2"
            android:layout_width="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="24dp"
            motion:layout_constraintBottom_toTopOf="@+id/title_shop_name"
            motion:layout_constraintStart_toEndOf="@+id/img_shop" />

        <Constraint
            android:id="@+id/link_shop_name"
            style="@style/Text_medium"
            android:layout_width="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:visibility="gone"
            motion:layout_constraintEnd_toEndOf="parent"
            motion:layout_constraintStart_toStartOf="parent"
            motion:layout_constraintTop_toBottomOf="@+id/instrument_name" />

        <Constraint
            android:id="@+id/link_line"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:src="@drawable/ic_line_stroke"
            android:visibility="gone"
            motion:layout_constraintEnd_toEndOf="@id/link_shop_name"
            motion:layout_constraintStart_toStartOf="@+id/link_shop_name"
            motion:layout_constraintTop_toBottomOf="@+id/link_shop_name" />


        <Constraint
            android:id="@+id/title_shop_name"
            style="@style/Text_medium"
            android:layout_width="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="6dp"
            android:text="@string/shop_title"
            motion:layout_constraintBottom_toTopOf="@+id/title_diameter"
            motion:layout_constraintStart_toStartOf="parent" />

        <Constraint
            android:id="@+id/shop_name"
            style="@style/Text_bold"
            android:layout_marginStart="8dp"
            motion:layout_constraintBottom_toBottomOf="@+id/title_shop_name"
            motion:layout_constraintStart_toEndOf="@+id/title_shop_name"
            motion:layout_constraintTop_toTopOf="@+id/title_shop_name" />

        <Constraint
            android:id="@+id/title_diameter"
            style="@style/Text_medium"
            android:layout_width="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="6dp"
            android:text="@string/diameter_title"
            motion:layout_constraintBottom_toTopOf="@+id/title_weight"
            motion:layout_constraintStart_toStartOf="parent" />

        <Constraint
            android:id="@+id/shop_diameter"
            style="@style/Text_bold"
            android:layout_marginStart="8dp"
            motion:layout_constraintBottom_toBottomOf="@+id/title_diameter"
            motion:layout_constraintStart_toEndOf="@+id/title_diameter"
            motion:layout_constraintTop_toTopOf="@+id/title_diameter" />

        <Constraint
            android:id="@+id/title_weight"
            style="@style/Text_medium"
            android:layout_width="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="6dp"
            android:text="@string/weight_title"
            motion:layout_constraintBottom_toTopOf="@id/title_sound"
            motion:layout_constraintStart_toStartOf="parent" />

        <Constraint
            android:id="@+id/shop_weight"
            style="@style/Text_bold"
            android:layout_marginStart="8dp"
            motion:layout_constraintBottom_toBottomOf="@+id/title_weight"
            motion:layout_constraintStart_toEndOf="@+id/title_weight"
            motion:layout_constraintTop_toTopOf="@+id/title_weight" />

        <Constraint
            android:id="@+id/title_sound"
            style="@style/Text_medium"
            android:layout_width="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="24dp"
            android:text="@string/sound_title"
            motion:layout_constraintBottom_toTopOf="@+id/button_shop"
            motion:layout_constraintStart_toStartOf="parent" />

        <Constraint
            android:id="@+id/shop_sound"
            style="@style/Text_bold"
            android:layout_marginStart="8dp"
            motion:layout_constraintBottom_toBottomOf="@+id/title_sound"
            motion:layout_constraintStart_toEndOf="@+id/title_sound"
            motion:layout_constraintTop_toTopOf="@+id/title_sound" />

        <Constraint
            android:id="@+id/button_shop"
            style="@style/Text_medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/button_shop"
            android:drawableEnd="@drawable/ic_arrow_right_button"
            android:text="@string/shop_button"
            android:textAllCaps="false"
            android:textColor="@color/super_"
            motion:layout_constraintBottom_toBottomOf="parent"
            motion:layout_constraintStart_toStartOf="parent" />
    </ConstraintSet>
</MotionScene>